настроил норм запрос для выборки продуктов по фильтрам много элементным
